Convert floating point channel depths to 8 bit integer when saving PNG

As per warning. This also fixes:

BUG: 375217